fixing folder path

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <article class="review">
 
                     <div class="img-container">
-                        <img src="img/person-1.jpg" id="person-img" alt="">
+                        <img src="./img/person-1.jpg" id="person-img" alt="">
                     </div>
 
                     <h4 id="author">susan smith</h4>
